# workshop-computer-chord-loop

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml  pages.yml  release.yml
firmware/: CMakeLists.txt  arp.cpp  arp.h  chord_engine.cpp  chord_engine.h  main.cpp  music_tables.cpp  music_tables.h  pad_voice.cpp  pad_voice.h  persist.cpp  persist.h  persist_flash.cpp  serial_proto.cpp  serial_proto.h  settings.h  tusb_config.h  usb_descriptors.c
test/: run_tests.sh  test_all.cpp
web/: index.html
